--- a/app/templates/main/edit.html
+++ b/app/templates/main/edit.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
