--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
+    {% if current_user.is_authenticated %}
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
@@ -18,12 +19,16 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+    {% endif %}
     <hr>
     {% for post in posts %}
-        <p>{{ post.id }}: {{ post.name }}</p>
+        <p>id: {{ post.id }} user: {{ post.user_id }} time UTC: {{ post.timestamp }}</p>
+        <p>{{ post.name }}</p>
         <p>{{ post.content }}</p>
-        <p><a href="{{ url_for('main.edit', id=post.id) }}">Edited post</a> 
-        <a href="{{ url_for('main.delete', id=post.id) }}">Delete post</a></p>
+        {% if current_user.is_authenticated %}
+            <p><a href="{{ url_for('main.edit', id=post.id) }}">Edited post</a> 
+               <a href="{{ url_for('main.delete', id=post.id) }}">Delete post</a></p>
+        {% endif %}
         <br>
     {% endfor %}
 {% endblock %}
