--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
             {% if current_user.is_anonymous %}
                 <a href="{{ url_for('auth.login') }}">Login</a>
             {% else %}
-                <a href="{{ url_for('auth.logout') }}">Logout</a>
+                <a href="{{ url_for('auth.logout') }}">Logout, {{ current_user.username }}</a>
             {% endif %}
         </div>
         <hr>    
