--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,20 +1,25 @@
 <!doctype html>
 <html>
-<title>Flask test project</title>
+<title>Microblog</title>
 <head>
+
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.css') }}">
 </head>
 <body>
-        <div>
-            Microblog:
-                <a href="{{ url_for('main.index') }}">Home</a>
-            {% if current_user.is_anonymous %}
-                <a href="{{ url_for('auth.login') }}">Login</a>
-            {% else %}
-                <a href="{{ url_for('auth.logout') }}">Logout, {{ current_user.username }}</a>
-            {% endif %}
-        </div>
-        <hr>    
-    <h1>Flask test project</h1>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="{{ url_for('main.index') }}">Microblog</a>        
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                {% if current_user.is_anonymous %}
+                   <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+                {% else %}
+                   <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout, {{ current_user.username }}</a>
+                {% endif %}
+              </li>
+            </ul>
+        </nav>
+
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <ul>
@@ -24,8 +29,10 @@
             </ul>
             <hr>
         {% endif %}
-    {% endwith %}    
-
-{% block content %}{% endblock %}
+    {% endwith %}
+   
+    {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
+
